--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -16,6 +16,7 @@ idna==3.3
 kombu==5.2.4
 pip-check-updates==0.17.0
 prompt-toolkit==3.0.30
+psycopg2==2.9.3
 pytz==2022.1
 PyYAML==6.0
 requests==2.28.1
