Add the tickers app and migrate my Ticker and TickerOHLC
- This Ticker model comes from my stacks project where I was playing
  around with using ML to pick stocks. Here, I'll use the same data to
  define a single stock ticker and query its historical data.
- I also had to back out the 8.x elasticsearch version. I'm not sure
  what the difference between the two is yet, but my original app used
  the older version, and I don't want to mess with that just yet.

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,11 @@ Django>=4.0.4,<5                # Django web framework
 djangorestframework>=3.13.1,<4  # REST functionality for Django
 celery>=5.2.7,<6                # Task queue
 psycopg2>=2.9.3,<3              # postgres library
+python-dateutil>=2.8.2,<3       # parse arbitrarily-formatted dates
+elasticsearch>=7.5.1,<8         # client for elasticsearch server
+numpy>=1.23.0,<2                # play with numbers
+pandas>=1.4.3,<2                # play with datasets
+pandas-datareader>=0.10.0,<0.11 # digest data from various sources
 
 pip-check-updates       # library for comparing installed versions to those in
                         # pypi
