--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -12,11 +12,18 @@ click-repl==0.2.0
 colorama==0.4.5
 Django==4.0.5
 djangorestframework==3.13.1
+elastic-transport==8.1.2
+elasticsearch==7.17.4
 idna==3.3
 kombu==5.2.4
+lxml==4.9.0
+numpy==1.23.0
+pandas==1.4.3
+pandas-datareader==0.10.0
 pip-check-updates==0.17.0
 prompt-toolkit==3.0.30
 psycopg2==2.9.3
+python-dateutil==2.8.2
 pytz==2022.1
 PyYAML==6.0
 requests==2.28.1
