--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -4,13 +4,16 @@ beautifulsoup4==4.11.1
 billiard==3.6.4.0
 celery==5.2.7
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.5
+cryptography==37.0.2
 Django==4.0.5
+django-rest-knox==4.2.0
 djangorestframework==3.13.1
 elastic-transport==8.1.2
 elasticsearch==7.17.4
@@ -23,6 +26,7 @@ pandas-datareader==0.10.0
 pip-check-updates==0.17.0
 prompt-toolkit==3.0.30
 psycopg2==2.9.3
+pycparser==2.21
 python-dateutil==2.8.2
 pytz==2022.1
 PyYAML==6.0
