--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -2,6 +2,7 @@ amqp==5.1.1
 asgiref==3.5.2
 beautifulsoup4==4.11.1
 billiard==3.6.4.0
+black==22.6.0
 celery==5.2.7
 certifi==2022.6.15
 cffi==1.15.1
@@ -20,10 +21,13 @@ elasticsearch==7.17.4
 idna==3.3
 kombu==5.2.4
 lxml==4.9.0
+mypy-extensions==0.4.3
 numpy==1.23.0
 pandas==1.4.3
 pandas-datareader==0.10.0
+pathspec==0.9.0
 pip-check-updates==0.17.0
+platformdirs==2.5.2
 prompt-toolkit==3.0.30
 psycopg2==2.9.3
 pycparser==2.21
@@ -36,6 +40,7 @@ soupsieve==2.3.2.post1
 sqlparse==0.4.2
 tabulate==0.8.10
 toml==0.10.2
+tomli==2.0.1
 tqdm==4.64.0
 urllib3==1.26.9
 vine==5.0.0
