--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -14,6 +14,7 @@ click-repl==0.2.0
 colorama==0.4.5
 cryptography==37.0.2
 Django==4.0.5
+django-cors-headers==3.13.0
 django-rest-knox==4.2.0
 djangorestframework==3.13.1
 elastic-transport==8.1.2
