--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       max-parallel: 4
       matrix:
@@ -24,15 +24,15 @@ jobs:
       DB_HOST: 127.0.0.1
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
 
     - name: Restore Cache
-      uses: actions/cache@v1
+      uses: actions/cache@v3
       id: cache
       with:
         path: ${{ env.LD_LIBRARY_PATH }}/python${{ matrix.python-version }}/site-packages
