--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -1,8 +1,9 @@
 amqp==5.1.1
-asgiref==3.7.2
+appdirs==1.4.4
+asgiref==3.5.2
 beautifulsoup4==4.11.1
 billiard==3.6.4.0
-black==22.12.0
+black==22.6.0
 celery==5.2.7
 certifi==2022.6.15
 cffi==1.15.1
@@ -13,27 +14,30 @@ click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.5
 cryptography==37.0.2
-Django==4.2.1
-django-cors-headers==3.14.0
+Django==4.0.5
+django-cors-headers==3.13.0
 django-rest-knox==4.2.0
-djangorestframework==3.14.0
+djangorestframework==3.13.1
 elastic-transport==8.1.2
-elasticsearch==7.17.9
+elasticsearch==7.17.4
+frozendict==2.3.8
+html5lib==1.1
 idna==3.3
 kombu==5.2.4
-lxml==4.9.0
+lxml==4.9.2
+multitasking==0.0.11
 mypy-extensions==0.4.3
-numpy==1.24.3
-pandas==1.5.3
+numpy==1.23.0
+pandas==1.4.3
 pandas-datareader==0.10.0
 pathspec==0.9.0
-pip-check-updates==0.22.0
+pip-check-updates==0.17.0
 platformdirs==2.5.2
 prompt-toolkit==3.0.30
-psycopg2==2.9.6
+psycopg2==2.9.3
 pycparser==2.21
 python-dateutil==2.8.2
-pytz==2022.1
+pytz==2023.3
 PyYAML==6.0
 requests==2.28.1
 six==1.16.0
@@ -43,7 +47,8 @@ tabulate==0.8.10
 toml==0.10.2
 tomli==2.0.1
 tqdm==4.64.0
-typing_extensions==4.6.3
 urllib3==1.26.9
 vine==5.0.0
 wcwidth==0.2.5
+webencodings==0.5.1
+yfinance==0.2.21
