--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -1,10 +1,10 @@
 amqp==5.1.1
 appdirs==1.4.4
-asgiref==3.5.2
+asgiref==3.7.2
 beautifulsoup4==4.11.1
-billiard==3.6.4.0
-black==22.6.0
-celery==5.2.7
+billiard==4.1.0
+black==22.12.0
+celery==5.3.1
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
@@ -14,27 +14,27 @@ click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.5
 cryptography==37.0.2
-Django==4.0.5
-django-cors-headers==3.13.0
+Django==4.2.3
+django-cors-headers==3.14.0
 django-rest-knox==4.2.0
-djangorestframework==3.13.1
+djangorestframework==3.14.0
 elastic-transport==8.1.2
-elasticsearch==7.17.4
+elasticsearch==7.17.9
 frozendict==2.3.8
 html5lib==1.1
 idna==3.3
-kombu==5.2.4
+kombu==5.3.1
 lxml==4.9.2
 multitasking==0.0.11
 mypy-extensions==0.4.3
-numpy==1.23.0
-pandas==1.4.3
+numpy==1.25.1
+pandas==1.5.3
 pandas-datareader==0.10.0
 pathspec==0.9.0
-pip-check-updates==0.17.0
+pip-check-updates==0.22.0
 platformdirs==2.5.2
 prompt-toolkit==3.0.30
-psycopg2==2.9.3
+psycopg2==2.9.6
 pycparser==2.21
 python-dateutil==2.8.2
 pytz==2023.3
@@ -47,6 +47,8 @@ tabulate==0.8.10
 toml==0.10.2
 tomli==2.0.1
 tqdm==4.64.0
+typing_extensions==4.7.1
+tzdata==2023.3
 urllib3==1.26.9
 vine==5.0.0
 wcwidth==0.2.5
