--- a/requirements-lock.txt
+++ b/requirements-lock.txt
@@ -2,9 +2,9 @@ amqp==5.1.1
 appdirs==1.4.4
 asgiref==3.7.2
 beautifulsoup4==4.11.1
-billiard==4.1.0
+billiard==4.2.0
 black==22.12.0
-celery==5.3.4
+celery==5.3.6
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
@@ -14,7 +14,7 @@ click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.5
 cryptography==37.0.2
-Django==4.2.6
+Django==4.2.8
 django-cors-headers==3.14.0
 django-rest-knox==4.2.0
 djangorestframework==3.14.0
@@ -23,15 +23,16 @@ elasticsearch==7.17.9
 frozendict==2.3.8
 html5lib==1.1
 idna==3.3
-kombu==5.3.2
+kombu==5.3.4
 lxml==4.9.2
 multitasking==0.0.11
 mypy-extensions==0.4.3
-numpy==1.26.0
+numpy==1.26.2
+packaging==23.2
 pandas==1.5.3
 pandas-datareader==0.10.0
 pathspec==0.9.0
-pip-check-updates==0.22.0
+pip-check-updates==0.23.0
 platformdirs==2.5.2
 prompt-toolkit==3.0.30
 psycopg2==2.9.9
@@ -50,7 +51,7 @@ tqdm==4.64.0
 typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==1.26.9
-vine==5.0.0
+vine==5.1.0
 wcwidth==0.2.5
 webencodings==0.5.1
 yfinance==0.2.21
