--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,17 +31,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Restore Cache
-      uses: actions/cache@v3
-      id: cache
-      with:
-        path: ${{ env.LD_LIBRARY_PATH }}/python${{ matrix.python-version }}/site-packages
-        key: ${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/requirements-lock.txt') }}
-
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements-lock.txt
+        pip install pipenv
+        pipenv install --dev
 
     - name: Check formatting
       run: git ls-files | grep "\.py$" | grep -v "/migrations/" | xargs python -m black --check
