--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -41,7 +41,7 @@ jobs:
       run: make format-check
 
     - name: Check migrations
-      run: python manage.py makemigrations --check
+      run: pipenv run python manage.py makemigrations --check
 
     - name: Run Tests
-      run: python manage.py test --noinput
+      run: pipenv run python manage.py test --noinput
