--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     depends_on:
       - db
       - redis
+      - elastic
     volumes:
       - .:/code
     ports:
@@ -29,7 +30,7 @@ services:
     volumes:
       - .:/code
   elastic:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.13.0
     environment:
       - discovery.type=single-node
     volumes:
