--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ pandas-datareader = "<0.11,>=0.10.0"
 django-rest-knox = "<5,>=4.2.0"
 yfinance = "<0.3,>=0.2.38"
 python-dotenv = "<2,>=1.0.1"
+funance-data = {ref = "f54554e2368229b3fdfaa3b3ad585437bcedcf6c", git = "git+https://github.com/SudoVim/funance-data"}
 
 [dev-packages]
 black = "<23,>=22.6.0"
