--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,6 +22,7 @@ jobs:
 
     env:
       DB_HOST: 127.0.0.1
+      PIPENV_VENV_IN_PROJECT: 1
 
     steps:
     - uses: actions/checkout@v3
@@ -35,7 +36,7 @@ jobs:
       uses: actions/cache@v4
       id: cache
       with:
-        path: /home/runner/.local/share/virtualenvs
+        path: .venv
         key: ${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/Pipfile.lock') }}
 
     - name: Install Dependencies
@@ -45,7 +46,7 @@ jobs:
         pipenv install --dev
 
     - name: Check formatting
-      run: make format-check
+      run: pipenv run black --exclude '(/migrations/|.venv/)' . --check
 
     - name: Check migrations
       run: pipenv run python manage.py makemigrations --check
