--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,6 @@ django = "<5,>=4.0.4"
 djangorestframework = "<4,>=3.13.1"
 django-cors-headers = "<4,>=3.13.0"
 celery = "<6,>=5.2.7"
-psycopg2 = "<3,>=2.9.3"
 python-dateutil = "<3,>=2.8.2"
 elasticsearch = "<9,>=8.13.1"
 numpy = "<2,>=1.23.0"
@@ -17,11 +16,14 @@ pandas-datareader = "<0.11,>=0.10.0"
 django-rest-knox = "<5,>=4.2.0"
 yfinance = "<0.3,>=0.2.38"
 python-dotenv = "<2,>=1.0.1"
-funance-data = {ref = "f54554e2368229b3fdfaa3b3ad585437bcedcf6c", git = "git+https://github.com/SudoVim/funance-data"}
+psycopg2 = "<3,>=2.9.9"
+funance-data = {git = "https://github.com/SudoVim/funance-data.git"}
 
 [dev-packages]
 black = "<23,>=22.6.0"
 pip-check-updates = "<0.24,>=0.23.0"
+mypy = "<2,>=1.10.0"
+types-pytz = "*"
 
 [requires]
 python_version = "3.10"
