--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,7 @@
 [mypy]
 exclude = (?x)(
     /migrations/ # Django migrations
+    |subs/|funance_data/
   )
 [mypy-rest_framework.*]
 ignore_missing_imports = True
