--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-django = "<5,>=4.0.4"
+django = "<6,>=5"
 djangorestframework = "<4,>=3.13.1"
 django-cors-headers = "<4,>=3.13.0"
 celery = "<6,>=5.2.7"
@@ -30,8 +30,9 @@ mypy = "<2,>=1.10.0"
 types-pytz = "*"
 ruff = "^0.9.10"
 basedpyright = "^1.10.2"
-djangorestframework-types = "^0.9.0"
-django-types = "^0.20.0"
+djangorestframework-types = "*"
+django-types = "*"
+tblib = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core"]
