--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,6 +26,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        submodules: "recursive"
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
@@ -38,6 +40,7 @@ jobs:
         poetry install --no-root
 
     - run: |
+        poetry run ruff --version
         poetry run ruff check --select I --fix
         git diff
 
