--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -34,15 +34,17 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Restore Cache
+      uses: actions/cache@v4
+      id: cache
+      with:
+        path: /home/runner/.cache/pypoetry/virtualenvs
+        key: ${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+
     - name: Install Dependencies
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
         poetry install --no-root
-
-    - run: |
-        poetry run ruff --version
-        poetry run ruff check --select I --fix
-        git diff
 
     - name: Check formatting
       run: |
