--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ yfinance = "<0.3,>=0.2.38"
 python-dotenv = "<2,>=1.0.1"
 psycopg2 = "<3,>=2.9.9"
 dateparser = "^1.2.1"
+django-stubs-ext = "^5.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
