Add a "shore up" of actions to be able to remake the AvailableActions

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -10,6 +10,7 @@
       "django_helpers/**",
       "subs/**",
       "**/migrations",
+      "**/factories.py",
       "manage.py"
   ],
   "reportUnannotatedClassAttribute": false,
