--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ basedpyright = "^1.10.2"
 djangorestframework-types = "*"
 django-types = "*"
 tblib = "^3.0.0"
+factory-boy = "^3.3.3"
 
 [build-system]
 requires = ["poetry-core"]
