--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,24 @@ services:
       - postgres-data:/var/lib/postgresql/data
   redis:
     image: redis:6
+  worker:
+    build: .
+    command: python manage.py rqworker-pool default low --num-workers 2
+    volumes:
+      - .:/code
+    depends_on:
+      - db
+      - redis
+      - elastic
+  scheduler:
+    build: .
+    command: python manage.py run_scheduler
+    volumes:
+      - .:/code
+    depends_on:
+      - db
+      - redis
+      - elastic
   elastic:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.13.0
     environment:
