--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ python-dotenv = "<2,>=1.0.1"
 psycopg2 = "<3,>=2.9.9"
 dateparser = "^1.2.1"
 django-stubs-ext = "^5.1.3"
+django-rq = "^3.0.0"
+rq-scheduler = "^0.14.0"
+django-redis = "^5.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
